Remove machinesets as using ODF in IBM Cloud

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -63,7 +63,7 @@ resources:
  
  # MachineSets and Infra Nodes
  #- unneeded for IBM Cloud ROKS with ODF add-on configured
- - argocd/machinesets.yaml
+ #- argocd/machinesets.yaml
  - argocd/infraconfig.yaml
  
  # Console link
