--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -96,6 +96,8 @@ spec:
     kind: roles
   - group: "route.openshift.io"
     kind: routes
+  - group: "route.openshift.io"
+    kind: route
   - group: ""
     kind: RoleBinding
   - group: "rbac.authorization.k8s.io"
