add ml model infra and apps

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -69,6 +69,11 @@ resources:
  # Console link
  - argocd/consolelink.yaml
 
+
+ # ML models 
+ - argocd/namespaces/namespace-ml-models.yaml
+
+
 patches:
 - target:
     group: argoproj.io
