--- a/0-bootstrap/hub/4-apps/kustomization.yaml
+++ b/0-bootstrap/hub/4-apps/kustomization.yaml
@@ -21,6 +21,9 @@ resources:
  ## An example has been provided
  #- argocd/cloudpaks/cp4i/cp4i.yaml
 
+## Machine Learning Models 
+ - argocd/ml-models/ml-model-v1.yaml
+
 patches:
 - target:
     group: argoproj.io
