--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -40,15 +40,15 @@ resources:
  # MultiCloud Management / Red Hat Advanced Cluster Management
  - argocd/operators/openshift-acm.yaml
  - argocd/instances/openshift-acm-instance.yaml
- - argocd/instances/openshift-acm-observability-instance.yaml
+ #- argocd/instances/openshift-acm-observability-instance.yaml
  - argocd/instances/openshift-gitopscluster-instance.yaml
  # Red Hat Advanced Cluster Management - Central Infrastructure Management
  - argocd/instances/openshift-acm-cim.yaml
  # Red Hat Advanced Cluster Management - Discovery Service
  #- argocd/instances/openshift-acm-discovery-service.yaml
  # Red Hat Advanced Cluster Management - Bare Metal Operator and Ironic
- - argocd/operators/baremetal-operator.yaml
- - argocd/operators/ironic.yaml
+ #- argocd/operators/baremetal-operator.yaml
+ #- argocd/operators/ironic.yaml
 
  #- argocd/operators/ibm-cp4mcm-operator.yaml
  #- argocd/instances/ibm-cp4mcm-instance.yaml
