--- a/0-bootstrap/hub/3-clusters/kustomization.yaml
+++ b/0-bootstrap/hub/3-clusters/kustomization.yaml
@@ -40,7 +40,10 @@ resources:
  
  ### vSphere
  #- argocd/clusters/test/vsphere/vsphere-test.yaml
- #- argocd/clusters/prod/vsphere/vsphere-prod.yaml 
+ #- argocd/clusters/prod/vsphere/vsphere-prod.yaml
+
+ ### Single Node OpenShift
+ - argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
 
  # Configure Submariner - Cross Cluster/Cloud communication
  #- argocd/submariner/add-existing-clusters.yaml
