--- a/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
+++ b/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
@@ -41,7 +41,7 @@ spec:
         hosts:
           name: host0
           macAddress: 52:54:00:c6:fe:cc
-          bmcAddress: redfish-virtualmedia+http://ai-edge.swinney.io:8000/redfish/v1/Systems/b6c92bbb-1e87-4972-b17a-12def3948890
+          bmcAddress: redfish-virtualmedia+http://ai-edge.swinney.io/redfish/v1/Systems/b6c92bbb-1e87-4972-b17a-12def3948890
 
         # Manage Cluster from Hub Cluster Repository
         managedCluster: 
