Deploy SNO via ZTP

--- a/0-bootstrap/hub/3-clusters/kustomization.yaml
+++ b/0-bootstrap/hub/3-clusters/kustomization.yaml
@@ -43,7 +43,7 @@ resources:
  #- argocd/clusters/prod/vsphere/vsphere-prod.yaml
 
  ### Single Node OpenShift
- #- argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
+ - argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
 
  # Configure Submariner - Cross Cluster/Cloud communication
  #- argocd/submariner/add-existing-clusters.yaml
