Fix clusterset name

--- a/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
+++ b/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
@@ -52,7 +52,7 @@ spec:
 
         # Add Cluster to Existing ClusterSet
         clusterSet:
-          name: "multicloud-cluster-set"
+          name: "last-mile-gitops"
           enabled: disable 
 
         # Cloud Provider Configuration
