--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -126,6 +126,8 @@ spec:
     kind: ManagedClusterSet
   - group: "external-secrets.io"
     kind: ClusterSecretStore
+  - group: "hive.openshift.io"
+    kind: HiveConfig
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
