add additional ml model

--- a/0-bootstrap/hub/4-apps/kustomization.yaml
+++ b/0-bootstrap/hub/4-apps/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
 
 ## Machine Learning Models 
  - argocd/ml-models/ml-model-v1.yaml
+ - argocd/ml-models/ml-model-v2.yaml
 
 patches:
 - target:
