--- a/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
@@ -1,6 +1,7 @@
 resources:
  ## Deploy Applications to Managed Clusters
-
+ - argocd/ml-models/ml-model-v1.yaml
+ - argocd/ml-models/ml-model-v1.yaml
 patches:
 - target:
     group: argoproj.io
