--- a/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
+++ b/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
@@ -48,11 +48,11 @@ spec:
 
         # Manage Cluster from Hub Cluster Repository
         managedCluster: 
-          status: "disabled" # Valid values "enabled" or "disabled"
-          managedRepo: https://github.com/one-touch-provisioning/otp-gitops.git # Repository that will be used to manage the Cluster resources
-          environment:  # Typically this would be dev, test, cicd, prod
-          projectName:  # This could be a project, line of business, anything that makes sense to you. This references the folder name
-                        # within the "environment" folder
+          status: "enabled" # Valid values "enabled" or "disabled"
+          managedRepo: https://github.com/otp-outside/otp-gitops.git # Repository that will be used to manage the Cluster resources
+          environment: prod # Typically this would be dev, test, cicd, prod
+          projectName: project-edge # This could be a project, line of business, anything that makes sense to you. This references the folder name
+                                    # within the "environment" folder
 
         # Add Cluster to Existing ClusterSet
         clusterSet:
