--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -58,6 +58,9 @@ resources:
 
  # Quay Registry
  - argocd/namespaces/namespace-quay-registry.yaml
+
+ # SysFlow 
+ - argocd/namespaces/namespace-sysflow.yaml
  
  # OpenShift Data Foundation aka OpenShift Container Storage
  #- unneeded for IBM Cloud ROKS with ODF add-on configured
