add ref to sf helm chart

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -75,6 +75,8 @@ resources:
  - argocd/operators/openshift-logging-operator.yaml
  - argocd/instances/openshift-logging-instance.yaml
 
+ # sysflow 
+ - argocd/instances/sysflow.yaml
 
  # RHSSO
  #- argocd/operators/rhsso-operator.yaml
