Deploy ACS to SNO cluster

--- a/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
@@ -1,5 +1,7 @@
 resources:
  - argocd/namespaces/ml-models.yaml
+ - argocd/namespaces/namespace-openshift-acs.yaml
+
 patches:
 - target:
     group: argoproj.io
