--- a/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/argocd/namespaces/namespace-ibm-common-services.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/argocd/namespaces/namespace-ibm-common-services.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: openshift-storage-namespace
+  name: namespace-ibm-common-services
   namespace: openshift-gitops
   labels:
     gitops.tier.layer: infra
@@ -9,11 +9,11 @@ metadata:
     argocd.argoproj.io/sync-wave: "100"
 spec:
   destination:
-    namespace: openshift-gitops
+    namespace: ibm-common-services
     server: https://kubernetes.default.svc
   project: infra
   source:
-    path: namespaces/openshift-storage
+    path: namespaces/ibm-common-services
   syncPolicy:
     automated:
       prune: true
