added eltham cluster using ilo4 bmc

--- a/0-bootstrap/hub/3-clusters/kustomization.yaml
+++ b/0-bootstrap/hub/3-clusters/kustomization.yaml
@@ -44,6 +44,7 @@ resources:
 
  ### Single Node OpenShift
  - argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
+ - argocd/clusters/prod/sno/sno-project-edge/sno-project-edge-eltham.yaml
 
  # Configure Submariner - Cross Cluster/Cloud communication
  #- argocd/submariner/add-existing-clusters.yaml
