--- a/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-eltham/sno-project-eltham.yaml
+++ b/0-bootstrap/hub/3-clusters/argocd/clusters/prod/sno/sno-project-eltham/sno-project-eltham.yaml
@@ -51,7 +51,7 @@ spec:
           status: "enabled" # Valid values "enabled" or "disabled"
           managedRepo: https://github.com/otp-outside/otp-gitops.git # Repository that will be used to manage the Cluster resources
           environment: prod # Typically this would be dev, test, cicd, prod
-          projectName: project-edge # This could be a project, line of business, anything that makes sense to you. This references the folder name
+          projectName: project-eltham # This could be a project, line of business, anything that makes sense to you. This references the folder name
                                     # within the "environment" folder
 
         # Add Cluster to Existing ClusterSet
