feature: explicitly add openshift-gitops operator and instance into sec-hub.
Signed-off-by: Jeff Tan <jeffetan@au1.ibm.com>

--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
  - argocd/operators/ibm-catalogs.yaml
  - argocd/operators/openshift-serverless.yaml
  - argocd/instances/openshift-serverless-knative-serving-instance.yaml
+ - argocd/operators/ibm-platform-navigator.yaml
+ - argocd/instances/ibm-platform-navigator-instance.yaml
 
 patches:
 - target:
