--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
@@ -31,3 +31,11 @@ patches:
     - op: add
       path: /spec/source/repoURL
       value: https://charts.cloudnativetoolkit.dev
+- target:
+    name: ibm-cp4s-operator
+  patch: |-
+    - op: add
+      path: /spec/source/helm/parameters/-
+      value:
+        name: spec.channel
+        value: v1.10
