fix: replace, not add, spec.channel with value of v1.10.
Signed-off-by: Jeff Tan <jeffetan@au1.ibm.com>

--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
@@ -33,7 +33,7 @@ patches:
 - target:
     name: ibm-cp4s-operator
   patch: |-
-    - op: add
+    - op: replace
       path: /spec/source/helm/parameters/-
       value:
         name: spec.channel
