--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
  - argocd/instances/ibm-foundational-services-instance.yaml
  - argocd/operators/ibm-automation-foundation-core-operator.yaml
  - argocd/operators/ibm-catalogs.yaml
-# - argocd/operators/openshift-serverless.yaml
-# - argocd/instances/openshift-serverless-knative-serving-instance.yaml
+ - argocd/operators/openshift-serverless.yaml
+ - argocd/instances/openshift-serverless-knative-serving-instance.yaml
 # - argocd/operators/ibm-platform-navigator.yaml
 # - argocd/instances/ibm-platform-navigator-instance.yaml
 
@@ -14,7 +14,7 @@ patches:
 - target:
     group: argoproj.io
     kind: Application
-    labelSelector: "gitops.tier.layer=services"
+    labelSelector: "gitops.tier.layer=services, gitops.tier.source=git"
   patch: |-
     - op: add
       path: /spec/source/repoURL
