added operator group to tools

--- a/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/argocd/namespaces/namespace-tools.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/argocd/namespaces/namespace-tools.yaml
@@ -18,3 +18,11 @@ spec:
     automated:
       prune: true
       selfHeal: true
+---
+apiVersion: operators.coreos.com/v1
+kind: OperatorGroup
+metadata:
+  name: tools
+spec:
+  targetNamespaces:
+    - tools
