--- a/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/argocd/namespaces/namespace-tools.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/argocd/namespaces/namespace-tools.yaml
@@ -23,6 +23,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: tools
+  namespace: tools
 spec:
   targetNamespaces:
     - tools
