--- a/0-bootstrap/spokeclusters/infra/sec-hub/3-apps/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/3-apps/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
  ## Deploy Applications to Managed Clusters
- - argocd/ml-models/ml-model-v1.yaml
- - argocd/ml-models/ml-model-v2.yaml
+# - argocd/ml-models/ml-model-v1.yaml
+# - argocd/ml-models/ml-model-v2.yaml
 patches:
 - target:
     group: argoproj.io
