add sysflow to SNO DS should deploy one per node

--- a/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
@@ -2,6 +2,7 @@ resources:
  - argocd/namespaces/ml-models.yaml
  - argocd/namespaces/namespace-openshift-acs.yaml
  - argocd/namespaces/namespace-sysflow.yaml
+ - argocd/rbac/rbac-sysflow.yaml
 patches:
 - target:
     group: argoproj.io
