--- a/0-bootstrap/spokeclusters/prod/project-edge/2-services/2-services.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/2-services/2-services.yaml
@@ -10,6 +10,8 @@ spec:
   destinations:
   - namespace: '*'
     server: https://kubernetes.default.svc 
+  - namespace: sysflow
+    server: https://kubernetes.default.svc
   clusterResourceWhitelist:
   - group: '*'
     kind: '*'
