--- a/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/kustomization.yaml
@@ -7,7 +7,8 @@ resources:
 - argocd/namespaces/namespace-knative-eventing.yaml
 - argocd/namespaces/namespace-knative-serving.yaml
 - argocd/namespaces/namespace-knative-serving-ingress.yaml
-
+- argocd/namespaces/namespace-sysflow.yaml
+- argocd/rbac/rbac-sysflow.yaml
 patches:
 - target:
     group: argoproj.io
