add sysflow app

--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/argocd/instances/sysflow.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/argocd/instances/sysflow.yaml
@@ -7,8 +7,7 @@ metadata:
   labels:
     gitops.tier.group: cntk
     gitops.tier.layer: services
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    gitops.tier.source: git
 spec:
   destination:
     namespace: sysflow
