add in openldap to sec hub

--- a/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - argocd/namespaces/namespace-knative-eventing.yaml
 - argocd/namespaces/namespace-knative-serving.yaml
 - argocd/namespaces/namespace-knative-serving-ingress.yaml
+- argocd/namespaces/namespace-openldap.yaml
 
 patches:
 - target:
