--- a/0-bootstrap/hub/4-apps/kustomization.yaml
+++ b/0-bootstrap/hub/4-apps/kustomization.yaml
@@ -22,8 +22,8 @@ resources:
  #- argocd/cloudpaks/cp4i/cp4i.yaml
 
 ## Machine Learning Models 
- - argocd/ml-models/ml-model-v1.yaml
- - argocd/ml-models/ml-model-v2.yaml
+ # - argocd/ml-models/ml-model-v1.yaml
+ #- argocd/ml-models/ml-model-v2.yaml
 
 patches:
 - target:
