remove ml model 2 from hub

--- a/0-bootstrap/hub/4-apps/kustomization.yaml
+++ b/0-bootstrap/hub/4-apps/kustomization.yaml
@@ -22,7 +22,7 @@ resources:
  #- argocd/cloudpaks/cp4i/cp4i.yaml
 
 ## Machine Learning Models 
- # - argocd/ml-models/ml-model-v1.yaml
+ - argocd/ml-models/ml-model-v1.yaml
  #- argocd/ml-models/ml-model-v2.yaml
 
 patches:
