--- a/0-bootstrap/spokeclusters/prod/old-macdonalds/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/old-macdonalds/2-services/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
- #- argocd/operators/openshift-acs-operator.yaml
- #- argocd/instances/openshift-acs-instance.yaml
+ - argocd/operators/openshift-acs-operator.yaml
+ - argocd/instances/openshift-acs-instance.yaml
 
 patches:
 - target:
