--- a/0-bootstrap/spokeclusters/prod/old-macdonalds/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/old-macdonalds/1-infra/kustomization.yaml
@@ -1,6 +1,9 @@
 resources:
  - argocd/namespaces/ml-models.yaml
- #- argocd/namespaces/namespace-openshift-acs.yaml
+ - argocd/namespaces/namespace-openshift-acs.yaml
+ # Machine Configuration Extensions
+ - argocd/machine-configs/machine-configs-control-planes.yaml
+ - argocd/machine-configs/machine-configs-workers.yaml
 
 patches:
 - target:
