--- a/0-bootstrap/spokeclusters/prod/old-macdonalds/3-apps/3-apps.yaml
+++ b/0-bootstrap/spokeclusters/prod/old-macdonalds/3-apps/3-apps.yaml
@@ -2,11 +2,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: infra
+  name: applications
   labels:
-    gitops.tier.layer: infra
+    gitops.tier.layer: applications
 spec:
-  sourceRepos: [] # Populated by kustomize patches in 1-infra/kustomization.yaml
+  sourceRepos: []  # Populated by kustomize patches in 3-apps/kustomization.yaml
   destinations:
   - namespace: '*'
     server: https://kubernetes.default.svc
@@ -25,18 +25,18 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: infra
+  name: applications
   annotations:
-    argocd.argoproj.io/sync-wave: "100"
+    argocd.argoproj.io/sync-wave: "400"
   labels:
     gitops.tier.layer: gitops
 spec:
   destination:
     namespace: openshift-gitops
     server: https://kubernetes.default.svc
-  project: infra
-  source: # repoURL  and targetRevision populated by kustomize patches in 1-infra/kustomization.yaml
-    path: 0-bootstrap/spokeclusters/prod/old-mcdonalds/1-infra
+  project: applications
+  source: # repoURL  and targetRevision populated by kustomize patches in 3-apps/kustomization.yaml
+    path: 0-bootstrap/spokeclusters/prod/old-macdonalds/3-apps
   syncPolicy:
     automated:
       prune: true
