--- a/setup/argocd-instance/resource-customizations/rhacm.yaml
+++ b/setup/argocd-instance/resource-customizations/rhacm.yaml
@@ -66,7 +66,37 @@ data:
     end
     hs.status = "Progressing"
     hs.message = "Waiting for managed cluster to be deploy."
-    return hs 
+    return hs
+
+  resource.customizations.health.cluster.open-cluster-management.io_ManagedCluster: |
+    hs = {}
+    if obj.status ~= nil and obj.status.conditions ~= nil then
+      for i, condition in ipairs(obj.status.conditions) do  
+        if condition.status == "True" and condition.reason == "ManagedClusterAvailable" then
+          hs.status = "Healthy"
+          hs.message = "Managed Cluster is available"
+          return hs
+        end
+      end
+    end
+    hs.status = "Progressing"
+    hs.message = "Waiting for managed cluster to be deploy."
+    return hs
+
+  resource.customizations.health.extensions.hive.openshift.io_AgentClusterInstall: |
+    hs = {}
+    if obj.status ~= nil and obj.status.conditions ~= nil then
+      for i, condition in ipairs(obj.status.conditions) do  
+        if condition.status == "True" and condition.reason == "InstallationCompleted" then
+          hs.status = "Healthy"
+          hs.message = "Cluster has successfully installed"
+          return hs
+        end
+      end
+    end
+    hs.status = "Progressing"
+    hs.message = "Waiting for Cluster to be installed"
+    return hs
 
   resource.customizations.health.internal.observability.open-cluster-management.io_MultiClusterObservability: |
     hs = {}
