Add MachineConfig API to ArgoCD CRB

--- a/setup/setup/3_custom-argocd-app-controller-clusterrole.yaml
+++ b/setup/setup/3_custom-argocd-app-controller-clusterrole.yaml
@@ -213,6 +213,7 @@ rules:
     resources:
       - machineconfigpools
       - containerruntimeconfigs
+      - machineconfigs
   - verbs:
       - '*'
     apiGroups:
