--- a/0-bootstrap/hub/3-clusters/kustomization.yaml
+++ b/0-bootstrap/hub/3-clusters/kustomization.yaml
@@ -45,7 +45,7 @@ resources:
  ### Single Node OpenShift
  - argocd/clusters/prod/sno/sno-project-edge/sno-project-edge.yaml
  - argocd/clusters/prod/sno/sno-old-macdonalds/sno-old-macdonalds.yaml
- - argocd/clusters/prod/sno/sno-sellfridges-appliances/sno-sellfridges-appliances.yaml
+ #- argocd/clusters/prod/sno/sno-sellfridges-appliances/sno-sellfridges-appliances.yaml
  #- argocd/clusters/prod/sno/sno-project-eltham/sno-project-eltham.yaml
 
  # Configure Submariner - Cross Cluster/Cloud communication
