add streamlit to hub

--- a/0-bootstrap/hub/4-apps/kustomization.yaml
+++ b/0-bootstrap/hub/4-apps/kustomization.yaml
@@ -21,9 +21,10 @@ resources:
  ## An example has been provided
  #- argocd/cloudpaks/cp4i/cp4i.yaml
 
-## Machine Learning Models 
+## Machine Learning Models  
  - argocd/ml-models/ml-model-v1.yaml
  - argocd/ml-models/ml-model-v2.yaml
+ - argocd/ml-models/ml-model-v3.yaml
 
 patches:
 - target:
