add v4 model to bens infra

--- a/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
@@ -3,7 +3,7 @@ resources:
  - argocd/ml-models/ml-model-v1.yaml
  - argocd/ml-models/ml-model-v2.yaml
  - argocd/ml-models/ml-model-v3.yaml # << added v3 model here 
- # - argocd/ml-models/ml-model-v4.yaml # <<
+ - argocd/ml-models/ml-model-v4.yaml # <<
 patches:
 - target:
     group: argoproj.io
