--- a/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
  ## Deploy Applications to Managed Clusters
  - argocd/ml-models/ml-model-v1.yaml
  - argocd/ml-models/ml-model-v2.yaml
- - argocd/ml-models/ml-model-v3.yaml # << added v3 model here 
+ # - argocd/ml-models/ml-model-v3.yaml # << added v3 model here 
  - argocd/ml-models/ml-model-v4.yaml # <<
 patches:
 - target:
