Update ArgoCD excluded resources

--- a/setup/argocd-instance/argocd-cm.yaml
+++ b/setup/argocd-instance/argocd-cm.yaml
@@ -24,3 +24,9 @@ data:
       kinds:
       - TaskRun
       - PipelineRun
+    - apiGroups:
+      - internal.open-cluster-management.io
+      kinds:
+      - ManagedClusterInfo
+      clusters:
+      - '*'
