adding logging to sec-hub

--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/kustomization.yaml
@@ -12,6 +12,11 @@ resources:
  - argocd/instances/sysflow.yaml
  - argocd/instances/openldap.yaml
 
+# Logging
+ - argocd/operators/openshift-logging-operator.yaml
+ - argocd/instances/openshift-logging-instance.yaml
+
+
 patches:
 - target:
     group: argoproj.io
