fixed up tagging

--- a/0-bootstrap/spokeclusters/infra/sec-hub/2-services/argocd/operators/openshift-logging-operator.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/2-services/argocd/operators/openshift-logging-operator.yaml
@@ -5,8 +5,10 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "251"
   labels:
-    gitops.tier.group: cntk
+    gitops.tier.group: ibm-cloudpak 
     gitops.tier.layer: services
+    gitops.tier.source: git
+
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
