disable cp4s namespaces

--- a/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/infra/sec-hub/1-infra/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
 
 - argocd/consolenotification.yaml
-- argocd/namespaces/namespace-ibm-common-services.yaml
-- argocd/namespaces/namespace-tools.yaml
+#- argocd/namespaces/namespace-ibm-common-services.yaml
+#- argocd/namespaces/namespace-tools.yaml
 - argocd/namespaces/namespace-openshift-serverless.yaml
 - argocd/namespaces/namespace-knative-eventing.yaml
 - argocd/namespaces/namespace-knative-serving.yaml
