--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -89,7 +89,7 @@ resources:
 
  # Red Hat Quay Registry
  - argocd/operators/quay-registry.yaml
- - argocd/instances/quay-registry-instance.yaml
+# - argocd/instances/quay-registry-instance.yaml
  - argocd/operators/quay-container-security.yaml
  - argocd/operators/quay-bridge-operator.yaml
 
