remove quay bridge

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -88,10 +88,10 @@ resources:
  #- argocd/instances/rhsso-integration-argocd-instance.yaml
 
  # Red Hat Quay Registry
- - argocd/operators/quay-registry.yaml
+# - argocd/operators/quay-registry.yaml
 # - argocd/instances/quay-registry-instance.yaml
  - argocd/operators/quay-container-security.yaml
- - argocd/operators/quay-bridge-operator.yaml
+#  - argocd/operators/quay-bridge-operator.yaml
 
 patches:
 - target:
