add virt to bens infra

--- a/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
@@ -3,7 +3,7 @@ resources:
  - argocd/namespaces/namespace-openshift-acs.yaml
  - argocd/namespaces/namespace-sysflow.yaml
  - argocd/rbac/rbac-sysflow.yaml
- # - argocd/namespaces/namespace-virtualisation.yaml
+ - argocd/namespaces/namespace-virtualisation.yaml
 patches:
 - target:
     group: argoproj.io
