add ns and operator

--- a/0-bootstrap/spokeclusters/prod/project-edge/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/2-services/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
  - argocd/operators/openshift-acs-operator.yaml
  - argocd/instances/openshift-acs-instance.yaml
  - argocd/instances/sysflow.yaml
- # - argocd/operators/openshift-virtualization-operator.yaml
+ - argocd/operators/openshift-virtualization-operator.yaml
  # - argocd/instances/openshift-virtualization-instance.yaml
 patches:
 - target:
