add instance of virt

--- a/0-bootstrap/spokeclusters/prod/project-edge/2-services/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/2-services/kustomization.yaml
@@ -3,7 +3,7 @@ resources:
  - argocd/instances/openshift-acs-instance.yaml
  - argocd/instances/sysflow.yaml
  - argocd/operators/openshift-virtualization-operator.yaml
- # - argocd/instances/openshift-virtualization-instance.yaml
+ - argocd/instances/openshift-virtualization-instance.yaml
 patches:
 - target:
     group: argoproj.io
