--- a/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/3-apps/kustomization.yaml
@@ -1,18 +1,22 @@
-resources:
  ## Deploy Applications to Managed Clusters
- - argocd/ml-models/ml-model-v1.yaml
- - argocd/ml-models/ml-model-v2.yaml
  # - argocd/ml-models/ml-model-v3.yaml # << added v3 model here 
- - argocd/ml-models/ml-model-v4.yaml # <<
+resources:
+- argocd/ml-models/ml-model-v1.yaml
+- argocd/ml-models/ml-model-v2.yaml
+- argocd/ml-models/ml-model-v4.yaml
+- argocd/demo/spring-log4j.yaml
+
 patches:
-- target:
-    group: argoproj.io
-    kind: Application
-    labelSelector: "gitops.tier.layer=applications"
-  patch: |-
+- patch: |-
     - op: add
       path: /spec/source/repoURL
       value: https://github.com/otp-outside/otp-gitops-apps.git
     - op: add
       path: /spec/source/targetRevision
       value: master
+  target:
+    group: argoproj.io
+    kind: Application
+    labelSelector: gitops.tier.layer=applications
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
