added suspicious namespace

--- a/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/prod/project-edge/1-infra/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
  - argocd/namespaces/namespace-sysflow.yaml
  - argocd/rbac/rbac-sysflow.yaml
  - argocd/namespaces/namespace-virtualisation.yaml
+ - argocd/namespaces/suspicious.yaml
+
 patches:
 - target:
     group: argoproj.io
